# spark_dataset_interfaces

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: rewrite_bag.py
src/spark_dataset_interfaces/: __init__.py  __main__.py  file_dataloader.py  image_dataloader.py  rosbag_dataloader.py  trajectory.py
tests/: test_trajectory.py
